# unified-channel-hub

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  lint.yml  publish-npm.yml  publish-python.yml
deploy/: .env.example  Caddyfile.example  README.md
docs/superpowers/plans/: 2026-06-11-docker-deployment.md
docs/superpowers/specs/: 2026-06-11-docker-deployment-design.md  2026-06-23-voice-translation-design.md
examples/: customer_service_poc.py
examples/ai-customer-service/: cs_store.py  customer_service_chat.html
java/src/main/java/io/github/gambletan/unifiedchannel/adapters/: EmailAdapter.java  GoogleCalendarAdapter.java  HomeAssistantAdapter.java  TwilioSMSAdapter.java  TwilioVoiceAdapter.java
knowledge/: faq.md
mcp-server/: README.md  package-lock.json  package.json
mcp-server/src/: index.ts
python/: README.md  README.zh-CN.md  pyproject.toml
python/examples/: customer_service_chat.html  customer_service_poc.py  model_router.py  x_project_telegram.py
python/examples/ai-customer-service/: API.md  main.py
python/mcp-server/: README.md
python/mcp-server-python/: README.md  pyproject.toml
python/mcp-server-python/src/unified_channel_mcp/: __init__.py  __main__.py  server.py
python/mcp-server/src/: index.ts
python/tests/: test_adapter.py  test_adapters_unit.py  test_apple_calendar.py  test_bridge.py  test_config.py  test_dashboard.py  test_email_adapter.py  test_gmail_api.py  test_i18n.py  test_identity.py  test_manager.py  test_manager_advanced.py  test_media.py  test_memory.py  test_middleware.py  test_new_adapters.py  test_optimizations.py  test_outlook.py  test_persistent_queue.py  test_queue.py  test_ratelimit.py  test_relay.py  test_scheduler.py  test_sip.py  test_streaming.py  test_types.py  test_voice.py
python/unified_channel/: __init__.py  adapter.py  bridge.py  config.py  dashboard.py  health.py  i18n.py  identity.py  keyed_queue.py  manager.py  media.py  memory.py  middleware.py  persistent_queue.py  queue.py  ratelimit.py  relay.py  scheduler.py  streaming.py  types.py  voice.py
python/unified_channel/adapters/: __init__.py  apple_calendar.py  bluebubbles.py  dingtalk.py  discord.py  email_imap.py  feishu.py  gmail_api.py  google_calendar.py  googlechat.py  homeassistant.py  imessage.py  irc.py  line.py  matrix.py  mattermost.py  msteams.py  nextcloud_talk.py  nostr.py  outlook.py  qq.py  sip.py  slack.py  synology_chat.py  telegram.py  twilio_sms.py  twilio_voice.py  twitch.py  webchat.py  wechat.py  whatsapp.py  whatsapp_web.py  wkim_compat.py  zalo.py
rust/: Cargo.toml
rust/src/: adapter.rs  error.rs  identity.rs  lib.rs  manager.rs  media.rs  middleware.rs  queue.rs  relay.rs  types.rs
rust/src/adapters/: discord.rs  email.rs  homeassistant.rs  irc.rs  matrix.rs  mattermost.rs  mod.rs  nostr.rs  slack.rs  telegram.rs  twilio_sms.rs  twilio_voice.rs  webhook.rs
rust/tests/: test_identity.rs  test_manager.rs  test_media.rs  test_middleware.rs  test_queue.rs  test_relay.rs  test_types.rs
support/: .gitignore  Dockerfile  README.md  config.example.yaml  config.yaml  pyproject.toml
support/ai/: rag.py  router.py
support/analytics/: metrics.py
support/bridges/whatsapp-web/: .gitignore  index.js  package.json
support/dashboard/: api.py
support/dashboard/static/: connect.html  index.html
support/docs/: API.md
support/scripts/: bundle-erp.sh  healthcheck.py  watchdog-docker.sh  watchdog.sh
support/support/: __init__.py  app.py  db.py  models.py
support/support/agents/: pool.py
support/support/ai/: backends.py  model_router.py  rag.py  router.py  voice_translate.py
support/support/dashboard/: api.py
support/support/dashboard/static/: chat.html  connect.html  index.html
support/support/tickets/: escalation.py  identity.py  manager.py  topic_bridge.py
support/tests/: test_db.py  test_identity.py  test_think_strip.py  test_tickets.py  test_voice_translate.py
tests/: test_adapters_unit.py  test_ai_router.py  test_db.py  test_escalation.py  test_integration.py  test_manager_advanced.py  test_memory.py  test_rag.py  test_rich.py  test_streaming.py  test_tickets.py
typescript/: package.json
typescript/src/: externals.d.ts  index.ts  manager.ts
typescript/src/adapters/: email.ts  google_calendar.ts  homeassistant.ts  twilio_sms.ts  twilio_voice.ts
typescript/tests/: optimizations.test.ts
unified_channel/: __init__.py  rich.py
unified_channel/adapters/: telegram.py  webchat.py  wkim_compat.py
