[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unified-channel-mcp"
version = "0.1.0"
description = "MCP server exposing unified-channel messaging as AI agent tools"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "unified-channel>=0.1.0",
    "pyyaml>=6.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/gambletan/unified-channel"
Repository = "https://github.com/gambletan/unified-channel"

[project.scripts]
unified-channel-mcp = "unified_channel_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/unified_channel_mcp"]
